fix: align with logo and input search

--- a/src/app/widget/components/SideNavigationMenu/SideNavigationMenu.component.scss
+++ b/src/app/widget/components/SideNavigationMenu/SideNavigationMenu.component.scss
@@ -20,8 +20,8 @@ body {
   display: flex;
   justify-content: left;
   height: 40px;
-  margin-top: 20px;
-  margin-bottom: 14px;
+  margin-top: 23px;
+  margin-bottom: 19px;
   margin-left: 8px;
 }
 
